<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/txtTenMonAnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/tenmonan"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/txtSoLuongThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/soluong"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtGiaTienThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:text="@string/giatien"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>
