<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edSuaTenMonAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/colorWhite"
        android:hint="@string/tenmonan"
        android:padding="@dimen/dp_10"
        android:textAlignment="center"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorGray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/edSuaGiaMonAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/colorWhite"
        android:hint="@string/giatien"
        android:padding="@dimen/dp_10"
        android:singleLine="true"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorGray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edSuaTenMonAn"/>

    <Button
        android:id="@+id/btnDongYSuaMonAn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dongy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edSuaGiaMonAn"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
